--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,22 +14,22 @@
     "test:watch": "npm test -- --watch",
     "start:watch": "nodemon",
     "start:prod": "tsc && node dist/src/main.js",
-    "start:docker": "docker-compose up --build",
-    "deploy:build": "chmod +x ./scripts/deploy-image.sh && ./scripts/deploy-image.sh",
-    "deploy:launch": "chmod +x ./scripts/deploy-launch.sh && ./scripts/deploy-launch.sh",
-    "deploy:prod": "npm run deploy:build && npm run deploy:launch"
+    "start:docker": "docker-compose up --build"
   },
   "dependencies": {
-    "@nestjs/common": "^4.5.9",
-    "@nestjs/core": "^4.5.10",
-    "@nestjs/testing": "^4.5.5",
+    "@nestjs/common": "^5.2.0",
+    "@nestjs/core": "^5.2.0",
+    "@nestjs/testing": "^5.2.0",
     "aws-sdk": "^2.276.1",
     "bcrypt": "^2.0.1",
     "bluebird-global": "^1.0.1",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.9.1",
     "cls-bluebird": "^2.1.0",
-    "continuation-local-storage": "^3.2.1",
+    "cls-hooked": "^4.2.2",
     "generate-password": "^1.4.0",
     "helmet": "^3.12.1",
+    "node-schedule": "^1.3.0",
     "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
@@ -41,10 +41,9 @@
     "passport-jwt": "^4.0.0",
     "pg": "^7.4.1",
     "pino": "^5.0.1",
-    "pino-cloudwatch": "^0.2.1",
     "pino-pretty": "^2.0.1",
     "reflect-metadata": "0.1.10",
-    "rxjs": "^5.5.6",
+    "rxjs": "6.0.0",
     "sequelize": "^4.37.4",
     "sequelize-typescript": "^0.6.3",
     "ts-node": "^4.1.0",
