--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
     "docs:generate": "./node_modules/.bin/compodoc -p tsconfig.json"
   },
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "@nestjs/common": "^5.2.0",
     "@nestjs/core": "^5.2.0",
     "@nestjs/testing": "^5.2.0",
@@ -30,7 +31,6 @@
     "cls-hooked": "^4.2.2",
     "generate-password": "^1.4.0",
     "helmet": "^3.12.1",
-    "node-schedule": "^1.3.0",
     "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
@@ -38,6 +38,7 @@
     "moment": "^2.22.1",
     "mysql2": "^1.5.3",
     "nconf": "^0.10.0",
+    "node-schedule": "^1.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.4.1",
