--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,7 @@
     "helmet": "^3.12.1",
     "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.2.1",
+    "jszip": "^3.1.5",
     "lodash": "^4.17.5",
     "mailgun-js": "^0.18.0",
     "moment": "^2.22.1",
